external-crates/move/crates/move-compiler/tests/move_2024/matching/counterexample_malformed_match.exp
error[E04016]: too few arguments
   ┌─ tests/move_2024/matching/counterexample_malformed_match.move:18:9
   │
18 │         SomeEnum::PositionalFields(_, ) => (),
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing pattern for field '1' in 'a::m::SomeEnum::PositionalFields'

